--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-i18next": ">=11.16.4"
   },
   "jest": {
+    "displayName": "WeatherApp",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/dist/"
@@ -87,8 +88,7 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js"
     },
     "setupFilesAfterEnv": [
-      "@testing-library/jest-dom",
-      "./src/test/setup.ts"
+      "@testing-library/jest-dom"
     ],
     "moduleNameMapper": {
       "^@/(.*)": "<rootDir>/src/$1"
