--- a/.eslintrc
+++ b/.eslintrc
@@ -1,37 +1,32 @@
 {
   "env": {
     "browser": true,
-    "es2021": true,
+    "es6": true,
     "node": true,
-    "jest": true
+    "jest": true,
   },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
   ],
   "parser": "@typescript-eslint/parser",
   "overrides": [
     {
       "files": ["*.json", "*.json5", "*.jsonc"],
-      "parser": "jsonc-eslint-parser"
-    }
+      "parser": "jsonc-eslint-parser",
+    },
   ],
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
   },
   "plugins": [
     "react",
     "react-hooks",
     "jest",
     "@typescript-eslint",
-    "better-styled-components"
+    "better-styled-components",
   ],
   "rules": {
     "prettier/prettier": "error",
@@ -46,17 +41,17 @@
       {
         "extendDefaults": true,
         "types": {
-          "{}": true
-        }
-      }
+          "{}": true,
+        },
+      },
     ],
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-unused-vars": "error",
-    "better-styled-components/sort-declarations-alphabetically": "error"
+    "better-styled-components/sort-declarations-alphabetically": "error",
   },
   "settings": {
     "react": {
-      "version": "detect"
-    }
-  }
+      "version": "detect",
+    },
+  },
 }
