--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "ylitse-web",
   "version": "0.0.1",
   "description": "Ylitse web UI",
-  "main": "index.js",
+  "type": "module",
+  "main": "./src/App.js",
   "scripts": {
     "eslint:check": "eslint-config-prettier src/App.tsx",
     "eslint:fix": "eslint --fix .",
     "eslint": "eslint .",
     "lint": "tsc && npm run eslint:check && npm run eslint",
     "test:unit": "jest",
-    "test:e2e": "npm run wait && cypress run",
+    "test:e2e": "cypress run",
     "test": "npm run test:unit && npm run test:e2e",
-    "build": "webpack",
-    "start": "webpack serve --open",
-    "wait": "wait-on http://localhost:8080/version && wait-on http://localhost:8082"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "AGPL-3.0-or-later",
@@ -21,16 +22,16 @@
     "@reduxjs/toolkit": "^1.8.2",
     "eslint-plugin-jsonc": "^2.6.0",
     "fp-ts": "^2.13.1",
-    "i18next": "^22.4.3",
-    "i18next-browser-languagedetector": "^7.0.1",
     "io-ts": "^2.2.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "reselect": "^4.1.6",
     "styled-components": "5.3.5",
+    "ts-node": "^10.9.2",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/jest": "^28.1.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-test-renderer": "^18.0.7",
     "@types/styled-components": "^5.1.25",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
@@ -68,13 +70,7 @@
     "react-test-renderer": "^18.2.0",
     "ts-loader": "^8.4.0",
     "typescript": "^4.7.4",
-    "wait-on": "^7.0.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "resolutions": {
-    "react-i18next": ">=11.16.4"
+    "wait-on": "^7.0.1"
   },
   "jest": {
     "displayName": "WeatherApp",
@@ -89,9 +85,18 @@
     },
     "setupFilesAfterEnv": [
       "@testing-library/jest-dom"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "moduleNameMapper": {
-      "^@/(.*)": "<rootDir>/src/$1"
-    }
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
