--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ylitse web UI",
   "type": "module",
   "main": "./src/App.js",
+  "homepage": " https://hlaineka.github.io/weather-app/",
   "scripts": {
     "eslint:check": "eslint-config-prettier src/App.tsx",
     "eslint:fix": "eslint --fix .",
@@ -12,9 +13,13 @@
     "test:unit": "jest",
     "test:e2e": "cypress run",
     "test": "npm run test:unit && npm run test:e2e",
+    "test:update": "jest --updateSnapshot",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "AGPL-3.0-or-later",
@@ -62,6 +67,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.5.4",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
@@ -81,7 +87,7 @@
     "testEnvironment": "jsdom",
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.cjs"
     },
     "setupFilesAfterEnv": [
       "@testing-library/jest-dom"
